# fac-ws_ai_assisted_development

./: ARCHITECTURE-ARCHIVE.md  ARCHITECTURE.md  CLAUDE-ARCHIVE.md  CLAUDE.md  FUNCTIONAL.md  HISTORY.md  README.md  TO-DO.md  TODO-ARCHIVE.md
backend/: pyproject.toml  requirements.txt  travel_app.db
backend/app/: database.py  main.py
backend/app/models/: __init__.py  request.py  response.py  tables.py  trip.py  weather.py
backend/app/repositories/: trip_repository.py  weather_repository.py
backend/app/routes/: trips.py  weather.py
backend/app/services/: trip_service.py  weather_service.py
backend/travel_planning_app.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
frontend/: .eslintignore  .eslintrc.cjs  .prettierrc  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.svelte  app.css  app.d.ts
frontend/src/lib/: Toast.svelte  TripCard.svelte  TripForm.svelte  WeatherWidget.svelte  WeatherWidgetSimple.svelte
frontend/src/services/: api.ts  tripService.ts  weatherService.ts
frontend/src/stores/: trips.ts  ui.ts  weather.ts
frontend/src/types/: api.ts  trip.ts  weather.ts
